Ignore prototype directory

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ generated/a-bam-p/*.out
 generated/a-bam-p/traj*
 generated/a-bam-p/mdinfo*
 generated/a-bam-p/mden*
+
+# Prototype testing directory
+a-bam-p/
